
SET(TARGET_SRC_FILES
		${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
        )

SET(TARGET_INC_DIRS 
    ${CMAKE_CURRENT_SOURCE_DIR}/.
	${CMAKE_CURRENT_SOURCE_DIR}/Base
   )


ADD_EXECUTABLE(${TARGET} ${TARGET_SRC_FILES})
TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE ${TARGET_INC_DIRS})

DEAL_II_SETUP_TARGET(${TARGET})

